--- a/Variables/test/loop.cshtml
+++ b/Variables/test/loop.cshtml
@@ -1,3 +1,9 @@
 @inherits avt.MyTokens.Core.ParsingEngine.RazorTemplate
-@for(var i = 10; i < 21; i++)
-    {<p>Line @i</p>}
+@{
+var i = 0;
+while (i < 5)
+    {
+    i += 1;
+   if (i = 5) {<p>Line @i</p>};
+    }
+}
