--- a/Variables/test/loop.cshtml
+++ b/Variables/test/loop.cshtml
@@ -4,8 +4,9 @@ var i = 0;
 while (i < 5000000)
     {
     i += 1;
-   if (i == 5000000) {<p>Line @i</p>};
-    }else
+   if (i == 5000000) {<p>Line @i</p>}
+    }
+    else
   {
   <p>Still Running</p>
   }
