Token 'test.loop' Updated.

--- a/Variables/test/loop.cshtml
+++ b/Variables/test/loop.cshtml
@@ -6,7 +6,7 @@ while (i < 5000000)
     i += 1;
    @if (i == 5000000) {<p>Line @i</p>}
     }
-    else
+    @else
   {
   <p>Still Running</p>
   };
